--- a/apps/storyteller/Dockerfile
+++ b/apps/storyteller/Dockerfile
@@ -11,41 +11,42 @@ RUN apk update && apk upgrade && \
 RUN git clone https://gitlab.com/storyteller-platform/storyteller-base.git /source-storyteller-base
 RUN git clone -b web-$VERSION https://gitlab.com/storyteller-platform/storyteller.git /source
 
-# Build the base
-FROM ghcr.io/elfhosted/ubuntu-jammy:rolling@sha256:f9f982e780fbad497108c83fdbc87f6a2451fff441e3687e27627b1459b527ab as base
+# # Build the base
+# FROM ghcr.io/elfhosted/ubuntu-jammy:rolling@sha256:f9f982e780fbad497108c83fdbc87f6a2451fff441e3687e27627b1459b527ab as base
 
-RUN apt-get update && \
-  DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
-  build-essential \
-  git \
-  cmake \
-  software-properties-common \
-  sqlite3 \
-  libsqlite3-dev \
-  argon2 \
-  wget \
-  ca-certificates \
-  curl \
-  gnupg \
-  libelf1 \
-  libnuma-dev \
-  kmod \
-  file \
-  python3 \
-  python3-pip \
-  tini && \
-  apt-get clean
+# RUN apt-get update && \
+#   DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+#   build-essential \
+#   git \
+#   cmake \
+#   software-properties-common \
+#   sqlite3 \
+#   libsqlite3-dev \
+#   argon2 \
+#   wget \
+#   ca-certificates \
+#   curl \
+#   gnupg \
+#   libelf1 \
+#   libnuma-dev \
+#   kmod \
+#   file \
+#   python3 \
+#   python3-pip \
+#   tini && \
+#   apt-get clean
 
-COPY --from=cloner /source-storyteller-base/scripts/install-node.sh .
+# COPY --from=cloner /source-storyteller-base/scripts/install-node.sh .
 
-ARG TARGETARCH
-# Manually install node 22 from prebuilt binary
-RUN ./install-node.sh
+# ARG TARGETARCH
+# # Manually install node 22 from prebuilt binary
+# RUN ./install-node.sh
 
-COPY --link --from=mwader/static-ffmpeg:6.1.1 /ffmpeg /usr/local/bin/
-COPY --link --from=mwader/static-ffmpeg:6.1.1 /ffprobe /usr/local/bin/
+# COPY --link --from=mwader/static-ffmpeg:6.1.1 /ffmpeg /usr/local/bin/
+# COPY --link --from=mwader/static-ffmpeg:6.1.1 /ffprobe /usr/local/bin/
 
-FROM base AS builder
+# FROM base AS builder
+FROM registry.gitlab.com/storyteller-platform/storyteller-base:latest AS builder
 
 WORKDIR /app
 
@@ -82,7 +83,7 @@ ENV SQLITE_NATIVE_BINDING=/app/node_modules/better-sqlite3/build/Release/better_
 
 RUN yarn workspaces foreach -Rpt --from @storyteller-platform/web run build
 
-FROM base AS runner
+FROM registry.gitlab.com/storyteller-platform/storyteller-base:latest AS runner
 
 WORKDIR /app
 
