--- a/apps/storyteller/Dockerfile
+++ b/apps/storyteller/Dockerfile
@@ -109,6 +109,7 @@ EXPOSE 8001
 
 ARG CI_COMMIT_TAG
 ENV CI_COMMIT_TAG=${CI_COMMIT_TAG}
+ENV VERSION=web-${VERSION}
 
 ENV PORT=8001
 ENV HOSTNAME=0.0.0.0
