--- a/apps/streamvix/Dockerfile
+++ b/apps/streamvix/Dockerfile
@@ -4,15 +4,14 @@ ARG CACHE_BUST=233
 ARG VERSION
 RUN echo "Cache bust: $CACHE_BUST"
 
-# Installa git, python3, pip e dipendenze per compilazione
+# Installa python3, pip e dipendenze per compilazione
 USER root 
-RUN apt-get update && apt-get install -y \
-    git \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 python3-pip python3-dev \
     build-essential ca-certificates \
     tesseract-ocr tesseract-ocr-ita tesseract-ocr-eng \
-    --no-install-recommends && rm -rf /var/lib/apt/lists/*
-# Imposta la directory di lavoro nell'immagine
+    libtesseract-dev libleptonica-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN git clone -b $VERSION  https://github.com/qwertyuiop8899/streamvix.git /usr/src/app
 
