can we add an elfie user?
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/storyteller/Dockerfile
+++ b/apps/storyteller/Dockerfile
@@ -126,4 +126,8 @@ COPY --from=builder /app/words.txt ./words.txt
 
 ENTRYPOINT ["/usr/bin/tini", "--"]
 
+
+ARG user=elfie
+RUN groupadd -g 568 $user && useradd --create-home --uid 568 --gid 568 --shell /bin/bash $user
+
 CMD ["node", "--enable-source-maps", "server.js"]
