fix streamvix entrypoint
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/streamvix/Dockerfile
+++ b/apps/streamvix/Dockerfile
@@ -62,4 +62,4 @@ RUN pnpm add undici@6.19.8
 # Esegui il build dell'applicazione TypeScript
 RUN pnpm run build
 
-ENTRYPOINT ["node", "/start"]
+ENTRYPOINT ["node", "dist/addon.js"]
