--- a/apps/statusio/Dockerfile
+++ b/apps/statusio/Dockerfile
@@ -7,25 +7,29 @@ RUN apk update && apk upgrade && \
 
 RUN git clone -b $VERSION  https://github.com/ARandomAddonDev/Statusio.git /source
 
-FROM node:24-slim
+# --- deps stage (caches node_modules) ---
+FROM node:20-alpine AS deps
+WORKDIR /app
 
-# Set the working directory
-WORKDIR /usr/src/app
-
-# Copy package.json and package-lock.json
+# Copy only manifests first for layer caching
 COPY --from=cloner /source/package*.json ./
 
-# Install dependencies
-RUN npm install
+# Deterministic install; omit dev deps for smaller image
+RUN npm ci --omit=dev
 
-# Copy the rest of the application files
+# --- runtime stage ---
+FROM node:20-alpine
+WORKDIR /app
+ENV NODE_ENV=production
+
+# Bring node_modules from deps stage
+COPY --from=deps /app/node_modules ./node_modules
+
+# Copy the rest of the app
 COPY --from=cloner /source/. .
 
-# Build the TypeScript files
-RUN npm run build
-
-# Expose the port the app runs on
+# Default port used by index.js
 EXPOSE 7042
 
-# Command to run the application
-CMD ["node", "dist/app.js"]
+# Run the addon (PORT and RD_TOKEN can be set at runtime)
+CMD ["node", "index.js"]
