--- a/apps/pulsarr/Dockerfile
+++ b/apps/pulsarr/Dockerfile
@@ -7,7 +7,7 @@ RUN apk update && apk upgrade && \
 
 RUN git clone -b $VERSION  https://github.com/jamcalli/pulsarr.git /source
 
-FROM node:22.20.0-alpine@sha256:cb3143549582cc5f74f26f0992cdef4a422b22128cb517f94173a5f910fa4ee7 AS builder
+FROM node:24.11.0-trixie AS builder
 
 WORKDIR /app
 
@@ -42,7 +42,7 @@ RUN --mount=type=cache,target=/app/node_modules/.vite \
 # Prune dev dependencies to produce production node_modules for runtime image
 RUN npm prune --omit=dev && mkdir -p ${CACHE_DIR}
 
-FROM node:22.18.0-alpine
+FROM node:24.11.0-trixie
 
 WORKDIR /app
 
