--- a/apps/watchly/dev/Dockerfile
+++ b/apps/watchly/dev/Dockerfile
@@ -7,7 +7,7 @@ RUN apk update && apk upgrade && \
     apk add --no-cache git && \
     echo "cache bust: ${CACHE_BUST}"
 
-RUN git clone https://github.com/elfhosted/Watchly.git /source
+RUN git clone https://github.com/TimilsinaBimal/Watchly.git /source
 
 # Use Python 3.11 slim image as base
 FROM python:3.11-slim
