--- a/apps/webstreamr/ci/goss.yaml
+++ b/apps/webstreamr/ci/goss.yaml
@@ -1,8 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  node:
-    running: true
+# process:
+#   node:
+#     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 # port:
