--- a/apps/watchly/Dockerfile
+++ b/apps/watchly/Dockerfile
@@ -9,7 +9,7 @@ RUN apk update && apk upgrade && \
 
 RUN git clone -b $VERSION https://github.com/TimilsinaBimal/Watchly.git /source
 
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 WORKDIR /app
 
@@ -18,20 +18,10 @@ RUN apt-get update && apt-get install -y \
     gcc curl ca-certificates\
     && rm -rf /var/lib/apt/lists/*
 
-# Download the latest installer
-ADD https://astral.sh/uv/install.sh /uv-installer.sh
-
-# Run the installer then remove it
-RUN sh /uv-installer.sh && rm /uv-installer.sh
-
-# Ensure the installed binary is on the `PATH`
-ENV PATH="/root/.local/bin/:$PATH"
+COPY --from=cloner /source/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY --from=cloner /source/app/ ./app/
 COPY --from=cloner /source/main.py .
-COPY --from=cloner /source/pyproject.toml .
-COPY --from=cloner /source/uv.lock .
 
-RUN uv sync --locked
-
-ENTRYPOINT ["uv", "run", "main.py"]
+ENTRYPOINT ["python", "main.py"]
